blockml/test/valid/11_wherecalc_refs_calc/v27/v27d.dashboard
dashboard: v27d
title: 'sales'
reports:
- title: 'weekly'
  model: v27m
  select:
  - a.dim6
  type: 'table'

