blockml/test/errors/12_chart/e187/e187d.dashboard
dashboard: e187d
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: e187m
  type: 'gauge_linear'
  data:
    value_field: a.dim1
  axis:
    x_axis: unk        


